Update reveal docs